[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PlayScene/NinjaScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Wizard/Wizard.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.8446, 84.5555 )

[node name="Ninja" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 63.7836, 94.3584 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 169.764, 73.837 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 71.3739, 129.439 )

[node name="WalkTimer" type="Timer" parent="."]

[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
